# agent-context

./: .gitignore  CODEOWNERS  README.md  profiles.yaml  pyproject.toml
.githooks/: pre-push
.github/workflows/: ci.yml  deploy.yml
src/agent_context/: __init__.py  __main__.py  analyzer.py  injector.py  manifest.py  profile_loader.py  profiles.py  registry.py  renderer.py  skills.py
src/agent_context/templates/: AGENTS.md.j2  build.agent.md.j2  careful-build.agent.md.j2  careful-review.agent.md.j2  copilot-instructions.md.j2  git-workflow.instructions.md.j2  mcp.json.j2  review.agent.md.j2  safety.instructions.md.j2  testing.instructions.md.j2
tests/: test_analyzer.py  test_api_exports.py  test_cli_profile.py  test_global_contamination_fix.py  test_injector.py  test_manifest.py  test_profile_loader.py  test_profiles.py  test_registry.py  test_skills.py
